tests/snapshot/inputs/errors/simple_contract_fail.ncl
# capture = 'stderr'
# command = []
1 | String
